add CLEditor-information in README file

--- a/README
+++ b/README
@@ -2,6 +2,12 @@
 CLEditor - custom
 ===================================
 
+Base
+--------------------
+
+1. [CLEditor][http://premiumsoftware.net/cleditor/]
+2. [CLEditor.icon][http://premiumsoftware.net/cleditor/downloads/index.html]
+
 Works
 ---------------------
 
